{
  "home": "Home",
  "history": "History",
  "ingredients": "Ingredients",
  "categories": "Categories",
  "settings": "Settings"
}

