{
  "home": "Início",
  "history": "Histórico",
  "ingredients": "Ingredientes",
  "categories": "Categorias",
  "settings": "Definições"
}
